# xvec

./: .gitignore  .pre-commit-config.yaml  LICENSE  New_XVec.ipynb  New_XVec_latest-Copy1.ipynb  New_XVec_latest.ipynb  Readme.md  Untitled.ipynb  Xvec_Example.ipynb  accessor.py  environment.yml  pyproject.toml  readthedocs.yml  xagg.ipynb  xagg_using_openEO_Data.ipynb
.github/workflows/: release.yaml  tests.yaml
ci/: 310.yaml  311.yaml  312.yaml  313.yaml  314.yaml  39.yaml  dev.yaml  dev.yml  latest.yaml
data/climate_data/: tas_Amon_CCSM4_rcp85_monthavg_20700101-20991231.nc
data/geo_data/: UScounties.dbf  UScounties.sbn  UScounties.sbx  UScounties.shp  UScounties.shp.xml  UScounties.shx
data/pop_data/: pop2000.nc
doc/source/: api.rst  conf.py  extract_pts.ipynb  geopandas.ipynb  index.md  indexing.ipynb  intro.ipynb  io.ipynb  plotting-temp.ipynb  plotting.ipynb  projections.ipynb  quickstart.ipynb  sampling.ipynb  summary_geometry.ipynb  zonal_stats.ipynb
doc/source/_static/: svalbard_glaciers_subset.gpkg
notebooks/: Readme.md  vector-data-cube-exploration.ipynb
xvec/: __init__.py  accessor.py  index.py  plotting.py  strtree.py  utils.py  zonal.py
xvec/tests/: conftest.py  test_accessor.py  test_index.py  test_plotting.py  test_strtree.py  test_xproj_integration.py  test_zonal_stats.py
